# PatchCookbook

./: .gitignore  3rdpartylicenses.txt  CMakeLists.txt  Cookbook Proof of Concept.amxd  Cookbook v0.1.amxd  Patch Cookbook v0.0.1.amxd  Patch Cookbook v0.0.2.amxd  PatchCookbook.amxd  README.md  dictIndexter.maxpat  index.html  main.6125d4bae84f4a8a.js  main.b1f4ef58c298dd9d.js  patchSelect.js  patchUnpack.js  patches.json  patchloader.js  polyfills.4d423f49da712cc2.js  runtime.0622faeb0acba071.js  slotData.maxpat  styles.5e55f17c2caade70.css  styles.5f03342a563f5d44.css
docs/: mark-proposal-for-patch-file.json  patch-file-schema.json  patch-file-structure.md  recipe-file-proposal.hjson
recipes/: README.md  basic_fm_keys.recipe  bass1.recipe  bass2.recipe  drum1.recipe  drum2.recipe  fm_808.recipe  fm_hi_hat.recipe  fm_kick_drum.recipe  fm_pluck.recipe  fm_snare_drum.recipe  fm_tom_drum.recipe  glide_monosynth.recipe  keys1.recipe  keys2.recipe  lead1.recipe  lead2.recipe  misc1.recipe  neuro_bass.recipe  reese_bass.recipe  sub_bass_drop.recipe
scripts/: publish_pages.sh
src/: consolidate.py
src/configure/: configure.py
src/consolidate/: consolidate.py
src/m4l/: CMakeLists.txt  Cookbook Proof of Concept.amxd  PatchCookbook.amxd  PatchCookbook.amxd.in  bass.json  drum.json  keys.json  lead.json  loadPatch.js  misc.json  patchUnpack.js  patches.js  typeSelect.js
src/web/: .eslintrc.json  angular.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
src/web/src/: index.html  material.module.ts  styles.css
src/web/src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts
src/web/src/app/patch-display/: patch-display.component.css  patch-display.component.html  patch-display.component.spec.ts  patch-display.component.ts
src/web/src/assets/: patches.json
tests/: test1.py
